Actualizar docs de logros
